选择支付时类型合并

--- a/app/src/main/res/layout/fragment_backup_contact.xml
+++ b/app/src/main/res/layout/fragment_backup_contact.xml
@@ -95,5 +95,5 @@
         android:layout_marginTop="10dp"
         android:autoLink="web"
         android:gravity="center_horizontal"
-        android:text="管理云端联系人可登录 http://www.lrcall.com/lr_dialer/"/>
+        android:text="管理云端联系人可登录 http://www.lrcall.com/lr_bst/"/>
 </LinearLayout>
