--- a/app/src/main/res/layout/fragment_order_list.xml
+++ b/app/src/main/res/layout/fragment_order_list.xml
@@ -39,5 +39,11 @@
             android:gravity="center_horizontal"
             android:text="没有订单！"
             android:textSize="18sp"/>
+        <Button
+            android:id="@+id/btn_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="刷新"/>
     </LinearLayout>
 </LinearLayout>
