--- a/app/src/main/res/layout/activity_user_agent_info.xml
+++ b/app/src/main/res/layout/activity_user_agent_info.xml
@@ -18,6 +18,34 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="20dp">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone">
+                <android.support.v4.view.ViewPager
+                    android:id="@id/viewpager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+                <com.ogaclejapan.smarttablayout.SmartTabLayout
+                    android:id="@+id/viewpagertab"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="16dp"
+                    android:layout_gravity="bottom|right"
+                    android:paddingBottom="6dp"
+                    android:paddingRight="10dp"
+                    app:stl_clickable="false"
+                    app:stl_customTabTextLayoutId="@layout/custom_tab_circle"
+                    app:stl_dividerColor="@color/transparent"
+                    app:stl_dividerThickness="0dp"
+                    app:stl_indicatorColor="@color/accent"
+                    app:stl_indicatorCornerRadius="4dp"
+                    app:stl_indicatorGravity="center"
+                    app:stl_indicatorInterpolation="linear"
+                    app:stl_indicatorThickness="8dp"
+                    app:stl_underlineColor="@color/transparent"
+                    app:stl_underlineThickness="0dp"/>
+            </FrameLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -60,35 +88,20 @@
                         android:text="升级"
                         android:textSize="18sp"/>
                 </LinearLayout>
-            </LinearLayout>
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone">
-                <android.support.v4.view.ViewPager
-                    android:id="@id/viewpager"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-                <com.ogaclejapan.smarttablayout.SmartTabLayout
-                    android:id="@+id/viewpagertab"
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                <TextView
+                    android:id="@+id/tv_apply_status"
                     android:layout_width="wrap_content"
-                    android:layout_height="16dp"
-                    android:layout_gravity="bottom|right"
-                    android:paddingBottom="6dp"
-                    android:paddingRight="10dp"
-                    app:stl_clickable="false"
-                    app:stl_customTabTextLayoutId="@layout/custom_tab_circle"
-                    app:stl_dividerColor="@color/transparent"
-                    app:stl_dividerThickness="0dp"
-                    app:stl_indicatorColor="@color/accent"
-                    app:stl_indicatorCornerRadius="4dp"
-                    app:stl_indicatorGravity="center"
-                    app:stl_indicatorInterpolation="linear"
-                    app:stl_indicatorThickness="8dp"
-                    app:stl_underlineColor="@color/transparent"
-                    app:stl_underlineThickness="0dp"/>
-            </FrameLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text=""
+                    android:textColor="@color/red"
+                    android:textSize="16sp"
+                    android:visibility="gone"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0.7dp"
+                android:background="@color/line"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0.7dp"
