--- a/app/src/main/res/menu/menu_activity_main.xml
+++ b/app/src/main/res/menu/menu_activity_main.xml
@@ -12,6 +12,12 @@
         android:title="搜索"
         app:showAsAction="always"/>
     <item
+        android:id="@+id/action_callback_info"
+        android:icon="@drawable/ic_user_info"
+        android:orderInCategory="100"
+        android:title="回拨信息"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/action_settings"
         android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="102"
