完善回拨功能

--- a/app/src/main/res/layout/activity_product_add.xml
+++ b/app/src/main/res/layout/activity_product_add.xml
@@ -419,13 +419,13 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"/>
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:id="@+id/iv_product"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:src="@drawable/bg_btn_add"/>
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/line"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
