--- a/app/src/main/res/layout/item_callback_calllog.xml
+++ b/app/src/main/res/layout/item_callback_calllog.xml
@@ -12,11 +12,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="3dp"
+        android:layout_marginLeft="8dp"
         android:layout_weight="1"
         android:orientation="vertical">
         <com.lrcall.ui.customer.MarqueeTextView
-            android:id="@+id/call_log_name"
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
@@ -34,7 +34,7 @@
             android:layout_weight="12"
             android:orientation="horizontal">
             <com.lrcall.ui.customer.MarqueeTextView
-                android:id="@+id/call_log_number"
+                android:id="@+id/tv_number"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
@@ -69,7 +69,7 @@
         android:measureWithLargestChild="true"
         android:orientation="vertical">
         <TextView
-            android:id="@+id/call_log_duration"
+            android:id="@+id/tv_call_duration"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
@@ -82,7 +82,7 @@
             android:textSize="12.0sp"
             android:visibility="gone"/>
         <TextView
-            android:id="@+id/call_log_date"
+            android:id="@+id/tv_call_date"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
