--- a/app/src/main/res/layout/item_callback_recharge_log.xml
+++ b/app/src/main/res/layout/item_callback_recharge_log.xml
@@ -7,7 +7,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp">
     <TextView
         android:id="@+id/tv_type"
         android:layout_width="match_parent"
