--- a/app/src/main/res/layout/activity_dial_waiting.xml
+++ b/app/src/main/res/layout/activity_dial_waiting.xml
@@ -21,8 +21,9 @@
         android:paddingTop="15dp">
         <ImageView
             android:id="@+id/iv_head"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="100dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/default_header"/>
         <TextView
             android:id="@+id/tv_name"
