--- a/app/src/main/res/layout/activity_reset_pwd.xml
+++ b/app/src/main/res/layout/activity_reset_pwd.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.lrcall.ui.ActivityLogin">
+    tools:context="com.lrcall.ui.ActivityChangePwd">
     <include layout="@layout/layout_title"/>
     <ScrollView
         android:layout_width="match_parent"
@@ -57,16 +57,45 @@
                     android:layout_marginRight="5dp"
                     android:gravity="center_vertical|right"
                     android:minWidth="100dp"
-                    android:text="登录密码："
+                    android:text="新的密码："
                     android:textColor="@android:color/widget_edittext_dark"
                     android:textSize="18sp"/>
                 <EditText
-                    android:id="@+id/et_password"
+                    android:id="@+id/et_new_password"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginRight="5dp"
                     android:background="@null"
-                    android:hint="请输入您的登录密码"
+                    android:hint="请输入您的新密码"
+                    android:inputType="textPassword"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/line"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
+                    android:gravity="center_vertical|right"
+                    android:minWidth="100dp"
+                    android:text="确认密码："
+                    android:textColor="@android:color/widget_edittext_dark"
+                    android:textSize="18sp"/>
+                <EditText
+                    android:id="@+id/et_re_new_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="5dp"
+                    android:background="@null"
+                    android:hint="请再次输入您的新密码"
                     android:inputType="textPassword"/>
             </LinearLayout>
             <LinearLayout
@@ -75,33 +104,37 @@
                 android:background="@color/line"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginTop="30dp"
-                android:paddingBottom="0dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="0dp">
-                <Button
-                    android:id="@+id/btn_login"
-                    android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="4dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginRight="5dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_weight="1"
-                    android:text="登录"
+                    android:gravity="center_vertical|right"
+                    android:minWidth="100dp"
+                    android:text="验证码："
+                    android:textColor="@android:color/widget_edittext_dark"
                     android:textSize="18sp"/>
-                <Button
-                    android:id="@+id/btn_register"
+                <EditText
+                    android:id="@+id/et_code"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
-                    android:text="注册"
-                    android:textSize="18sp"/>
+                    android:background="@null"
+                    android:hint="请输入验证码"
+                    android:inputType="numberSigned"/>
+                <Button
+                    android:id="@+id/btn_get_code"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="获取验证码"/>
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/line"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -110,14 +143,14 @@
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:paddingTop="0dp">
-                <TextView
-                    android:id="@+id/tv_reset_pwd"
+                <Button
+                    android:id="@+id/btn_ok"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_marginBottom="4dp"
-                    android:layout_marginRight="5dp"
-                    android:gravity="right"
-                    android:text="忘记密码？点击此处"
+                    android:layout_marginTop="4dp"
+                    android:background="@drawable/btn_primary"
+                    android:text="确认重置"
                     android:textSize="18sp"/>
             </LinearLayout>
         </LinearLayout>
