1,添加用户升级等级功能（可商城卡支付或在线支付）; 2,添加商家分销平台商品功能（区分商家权限）; 3,添加积分兑换商城;

--- a/app/src/main/res/layout/activity_shop_info.xml
+++ b/app/src/main/res/layout/activity_shop_info.xml
@@ -227,6 +227,27 @@
                             android:textSize="16sp"/>
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/layout_agent_products_manage"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/white"
+                        android:orientation="vertical">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:padding="10dp"
+                            android:src="@drawable/icon_find_suggest_white"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="5dp"
+                            android:gravity="center"
+                            android:text="分销商品管理"
+                            android:textSize="16sp"/>
+                    </LinearLayout>
+                    <LinearLayout
                         android:id="@+id/layout_orders_manage"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
