--- a/app/src/main/res/layout/dialog_setting_auto_answer.xml
+++ b/app/src/main/res/layout/dialog_setting_auto_answer.xml
@@ -64,7 +64,7 @@
                     android:text="自动接听2"
                     android:textColor="@color/black"/>
             </RadioGroup>
-            <ImageViewF
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:scaleType="fitXY"
