--- a/app/src/main/res/layout/fragment_more_head.xml
+++ b/app/src/main/res/layout/fragment_more_head.xml
@@ -68,7 +68,9 @@
                     <TextView
                         android:id="@+id/tv_name"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="8dp"
+                        android:layout_weight="1"
                         android:gravity="center_vertical"
                         android:text=""
                         android:textSize="20sp"
@@ -76,7 +78,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_weight="1"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
                         <TextView
@@ -86,15 +89,18 @@
                             android:gravity="center_vertical"
                             android:text=""
                             android:textSize="18sp"/>
-                        <Button
-                            android:id="@+id/btn_upgrade"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:padding="5dp"
-                            android:text="升级"/>
                     </LinearLayout>
                 </LinearLayout>
+                <Button
+                    android:id="@+id/btn_upgrade"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:background="@null"
+                    android:padding="5dp"
+                    android:text="升级"
+                    android:textColor="@color/red"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
