--- a/app/src/main/res/layout/activity_shop_info.xml
+++ b/app/src/main/res/layout/activity_shop_info.xml
@@ -78,16 +78,16 @@
                     <Button
                         android:id="@+id/btn_register"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bg_corner_10"
+                        android:layout_height="40dp"
+                        android:background="@drawable/bg_btn_common"
                         android:text="申请开店"
                         android:textSize="18sp"
                         android:visibility="gone"/>
                     <Button
                         android:id="@+id/btn_auth"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bg_corner_10"
+                        android:layout_height="40dp"
+                        android:background="@drawable/bg_btn_common"
                         android:text="申请认证"
                         android:textSize="18sp"
                         android:visibility="gone"/>
@@ -179,36 +179,37 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:visibility="gone">
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/layout_add_product"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    android:background="@color/line"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:gravity="center_vertical"
-                        android:padding="10dp"
-                        android:src="@drawable/icon_find_suggest_white"/>
+                    android:background="@color/line">
                     <TextView
+                        android:id="@+id/tv_add_product"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_centerInParent="true"
                         android:gravity="left|center_vertical"
                         android:text="添加商品"
                         android:textSize="18sp"/>
-                </LinearLayout>
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="match_parent"
+                        android:layout_toLeftOf="@id/tv_add_product"
+                        android:padding="10dp"
+                        android:src="@drawable/ic_add_white_normal"/>
+                </RelativeLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="100dp"
                     android:background="@color/white"
                     android:orientation="horizontal"
-                    android:paddingBottom="10dp">
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp">
                     <LinearLayout
                         android:id="@+id/layout_products_manage"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@color/white"
                         android:orientation="vertical">
@@ -217,7 +218,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:padding="10dp"
-                            android:src="@drawable/icon_find_suggest_white"/>
+                            android:src="@drawable/ic_products"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -229,16 +230,15 @@
                     <LinearLayout
                         android:id="@+id/layout_agent_products_manage"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:background="@color/white"
                         android:orientation="vertical">
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:padding="10dp"
-                            android:src="@drawable/icon_find_suggest_white"/>
+                            android:src="@drawable/ic_products"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -250,7 +250,7 @@
                     <LinearLayout
                         android:id="@+id/layout_orders_manage"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@color/white"
                         android:orientation="vertical">
@@ -259,7 +259,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:padding="10dp"
-                            android:src="@drawable/icon_find_suggest_white"/>
+                            android:src="@drawable/ic_orders"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -275,14 +275,15 @@
                     android:background="@color/line"/>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="100dp"
                     android:background="@color/white"
                     android:orientation="horizontal"
+                    android:paddingBottom="10dp"
                     android:paddingTop="10dp">
                     <LinearLayout
                         android:id="@+id/layout_profits_list"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@color/white"
                         android:orientation="vertical">
@@ -291,7 +292,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:padding="10dp"
-                            android:src="@drawable/icon_find_suggest_white"/>
+                            android:src="@drawable/mine_icon_ordrers"/>
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -303,10 +304,31 @@
                     <LinearLayout
                         android:id="@+id/layout_data_list"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:background="@color/white"
                         android:orientation="vertical">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_tongji"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="5dp"
+                            android:gravity="center"
+                            android:text="数据统计"
+                            android:textSize="16sp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@color/white"
+                        android:orientation="vertical"
+                        android:visibility="invisible">
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
