--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -250,12 +250,60 @@
                 android:background="@color/line"
                 android:visibility="gone"/>
             <RelativeLayout
-                android:id="@+id/layout_auto_answer"
+                android:id="@+id/layout_choose_callback_line"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/app_setting_relativeLayout_h"
                 android:layout_marginLeft="@dimen/margin0"
                 android:layout_marginRight="@dimen/margin0"
                 android:layout_marginTop="@dimen/margin10"
+                android:background="@color/white"
+                android:contentDescription="@null">
+                <TextView
+                    android:id="@+id/app_choose_callback_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/margin15"
+                    android:text="选择语音通道"
+                    android:textAppearance="?android:textAppearanceLarge"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/textsize18"/>
+                <ImageView
+                    android:id="@id/app_setting_item_tag3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/margin15"
+                    android:contentDescription="@null"
+                    android:src="@drawable/setting_right_arrow"/>
+                <TextView
+                    android:id="@+id/tv_choose_callback_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@id/app_choose_callback_line"
+                    android:layout_alignBottom="@id/app_choose_callback_line"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/margin20"
+                    android:layout_toLeftOf="@id/app_setting_item_tag3"
+                    android:text=""
+                    android:textColor="@color/setting_gray"
+                    android:textSize="@dimen/textsize18"
+                    android:visibility="visible"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="@dimen/margin15"
+                android:layout_marginRight="@dimen/margin15"
+                android:background="@color/line"/>
+            <RelativeLayout
+                android:id="@+id/layout_auto_answer"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/app_setting_relativeLayout_h"
+                android:layout_marginLeft="@dimen/margin0"
+                android:layout_marginRight="@dimen/margin0"
                 android:background="@color/white"
                 android:contentDescription="@null">
                 <TextView
