--- a/app/src/main/res/layout/item_shop_order.xml
+++ b/app/src/main/res/layout/item_shop_order.xml
@@ -96,12 +96,12 @@
             android:gravity="right"
             android:orientation="horizontal">
             <Button
-                android:id="@+id/btn_cancel_order"
+                android:id="@+id/btn_change_express"
                 android:layout_width="100dp"
                 android:layout_height="45dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/bg_btn_common"
-                android:text="取消订单"
+                android:text="修改运费"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:visibility="gone"/>
