1,回拨呼叫添加普通通道和高清通道;

--- a/app/src/main/res/layout/dialog_setting_auto_answer.xml
+++ b/app/src/main/res/layout/dialog_setting_auto_answer.xml
@@ -39,30 +39,33 @@
                 android:id="@+id/rg_callback_answer"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:checkedButton="@+id/rb_answer1"
                 android:orientation="vertical">
                 <RadioButton
                     android:id="@+id/rb_answer_user"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:text="手动接听"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/black"
+                    android:textSize="18sp"/>
                 <RadioButton
                     android:id="@+id/rb_answer1"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="自动接听1"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/black"
+                    android:textSize="18sp"/>
                 <RadioButton
                     android:id="@+id/rb_answer2"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
                     android:text="自动接听2"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/black"
+                    android:textSize="18sp"/>
             </RadioGroup>
             <ImageView
                 android:layout_width="match_parent"
