--- a/app/src/main/res/layout/activity_user_agent_info.xml
+++ b/app/src/main/res/layout/activity_user_agent_info.xml
@@ -105,6 +105,7 @@
                 android:layout_height="0.7dp"
                 android:background="@color/line"/>
             <LinearLayout
+                android:id="@+id/layout_funcs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -185,12 +186,14 @@
                     android:layout_height="0.7dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:background="@color/line"/>
+                    android:background="@color/line"
+                    android:visibility="gone"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
                     <LinearLayout
                         android:id="@+id/layout_withdraw"
                         android:layout_width="match_parent"
