--- a/app/src/main/res/menu/capture.xml
+++ b/app/src/main/res/menu/capture.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright (C) 2012 ZXing authors
-
- Licensed under the Apache License, Version 2.0 (the "License");
- you may not use this file except in compliance with the License.
- You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
- Unless required by applicable law or agreed to in writing, software
- distributed under the License is distributed on an "AS IS" BASIS,
- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- See the License for the specific language governing permissions and
- limitations under the License.
- -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+  ~ Libit保留所有版权，如有疑问联系QQ：308062035
+  ~ Copyright (c) 2016.
+  -->
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_share"
         android:icon="@android:drawable/ic_menu_share"
         android:orderInCategory="1"
         android:showAsAction="withText|ifRoom"
-        android:title="@string/menu_share"/>
+        android:title="@string/menu_share"
+        android:visible="false"/>
+    <item
+        android:id="@+id/menu_choose_pic"
+        android:icon="@android:drawable/ic_menu_gallery"
+        android:orderInCategory="1"
+        android:showAsAction="withText|ifRoom"
+        android:title="@string/menu_choose_pic"/>
     <item
         android:id="@+id/menu_history"
         android:icon="@android:drawable/ic_menu_recent_history"
@@ -32,11 +29,13 @@
         android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="3"
         android:showAsAction="withText"
-        android:title="@string/menu_settings"/>
+        android:title="@string/menu_settings"
+        android:visible="false"/>
     <item
         android:id="@+id/menu_help"
         android:icon="@android:drawable/ic_menu_help"
         android:orderInCategory="4"
         android:showAsAction="withText"
-        android:title="@string/menu_help"/>
+        android:title="@string/menu_help"
+        android:visible="false"/>
 </menu>
