--- a/app/src/main/res/drawable/bg_adapter_item.xml
+++ b/app/src/main/res/drawable/bg_adapter_item.xml
@@ -6,5 +6,5 @@
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/bg_section_pressed" android:state_pressed="true"/>
-    <item android:drawable="@color/transparent"/>
+    <item android:drawable="@color/white"/>
 </selector>
