--- a/app/src/main/res/layout/activity_user_wallet.xml
+++ b/app/src/main/res/layout/activity_user_wallet.xml
@@ -14,6 +14,7 @@
         android:layout_height="0.7dp"
         android:background="@color/line"/>
     <LinearLayout
+        android:id="@+id/layout_user_balance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -112,6 +113,7 @@
         android:layout_marginLeft="40dp"
         android:background="@color/line"/>
     <LinearLayout
+        android:id="@+id/layout_user_point"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
