--- a/app/src/main/res/layout/activity_user_wallet.xml
+++ b/app/src/main/res/layout/activity_user_wallet.xml
@@ -143,13 +143,29 @@
         android:layout_width="match_parent"
         android:layout_height="0.7dp"
         android:background="@color/line"/>
-    <Button
-        android:id="@+id/btn_duihuan"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:background="@drawable/bg_btn_common"
-        android:text="积分兑换"
-        android:textColor="@color/white"
-        android:textSize="18sp"/>
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_withdraw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_btn_common"
+            android:text="我要提现"
+            android:textColor="@color/white"
+            android:textSize="18sp"/>
+        <Button
+            android:id="@+id/btn_duihuan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_btn_common"
+            android:text="积分兑换"
+            android:textColor="@color/white"
+            android:textSize="18sp"/>
+    </LinearLayout>
 </LinearLayout>
